--- a/main.html
+++ b/main.html
@@ -8,9 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<script type="text/javascript" src="./script.js">
 
+</script>
+<form>
+	<label>First Name: </label><input type="text" id="fn"><br>
+	<label>Last Name: </label><input type="text" id="ln"><br>
+	<label>Phone Number: </label><input type="text" id="pn"><br>
+	<label>Email ID: </label><input type="email" id="ei"><br>
+	<button onclick="myFunction();" type="submit">Submit</button>
+</form>
+	
 </body>
 
 </html>
